manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: zeversolar-monitor
  ports:
    - name: http
      port: 8000
      targetPort: 8000
