manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: solarcloudgate.zeversolar.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: zeversolar-monitor-service
                port:
                  name: http
    - host: api.easylink.io
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: zeversolar-monitor-service
                port:
                  name: http
